moving into sugg

--- a/sugg/public/index.html
+++ b/sugg/public/index.html
@@ -60,7 +60,7 @@
         </form>
     </div>
     <div class="col-sm-12" id="bucket">
-        <img id="bucketPic" src="./images/bucket.jpg" alt="bucket pic" width="30%">
+        <img id="bucketPic" src="images/bucket.jpg" alt="bucket pic" width="30%">
     </div>
     <div>
         <p id="idea"></p>
