--- a/sugg/public/index.html
+++ b/sugg/public/index.html
@@ -44,7 +44,7 @@
 <div id='app' ng-app='app' ng-controller='mainCtrl'>
 <h1>The Universal Bucketlist</h1><h1>
     <div id="submitIdea" class="col-sm-6">
-        <form id="newSugg" ng-submit="addSugg">
+        <form id="newSugg" ng-submit="addSugg()">
             <h3>Add your idea to the bucket: </h3>
             <input type="text" id="addIdea" ng-model="sugg" value="" style="font-size: 32px;">
             <p>
